fix 3 recensioni, dashboard admin e gap tra recensioni

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -610,6 +610,7 @@ input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 0.5em;
 }
 
 .reviews-section {
